--- a/index.html
+++ b/index.html
@@ -31,189 +31,263 @@
 			</ul>
 		</nav>
 		<div class="header__tagline">Это вам не Школа!</div>
+		<input class="header__switcher" id="switcher" type="checkbox">
+		<div class="header__openMenu">
+			<label for="switcher">
+				<i class="header__openMenu-icon fas fa-bars"></i>
+			</label>
+		</div>
+		<div class="header__menuMobile">
+			<section class="header__menuMobile-topBar">
+				<div class="header__mainLogo">
+					<a href="index.html" class="mainLogo"></a>
+				</div>
+				<div class="header__openMenu">
+					<label class="header__closeMenu" for="switcher">
+						<i class="header__closeMenu-icon fas fa-times"></i>
+					</label>
+				</div>
+			</section>
+			<section class="header__menuMobile-main">
+				<nav class="header__menuMobile-nav">
+					<ul class="header__menuMobile-navList">
+						<li class="header__menuMobile-navItem">
+							<a href="#" class="header__menuMobile-navLink">Наши курсы</a>
+						</li>
+						<li class="header__menuMobile-navItem">
+							<a href="#" class="header__menuMobile-navLink">Преимущества</a>
+						</li>
+						<li class="header__menuMobile-navItem">
+							<a href="#" class="header__menuMobile-navLink">Оставить заявку</a>
+						</li>
+						<li class="header__menuMobile-navItem">
+							<a href="#" class="header__menuMobile-navLink">Контакты</a>
+						</li>
+					</ul>
+				</nav>
+			</section>
+			<section class="header__menuMobile-bottomBar">
+				<div class="footer__brandLogo">
+					<a href="index.html">
+						<img src="assets/img/logo-brand.svg" alt="logo">
+					</a>
+				</div>
+				<nav class="footer__social">
+					<ul class="footer__social-list">
+						<li class="footer__social-item">
+							<a href="#" class="footer__social-link footer__social-linkInsta"></a>
+						</li>
+						<li class="footer__social-item">
+							<a href="#" class="footer__social-link footer__social-linkFacebook"></a>
+						</li>
+						<li class="footer__social-item">
+							<a href="#" class="footer__social-link footer__social-linkVk"></a>
+						</li>
+						<li class="footer__social-item">
+							<a href="#" class="footer__social-link footer__social-linkYoutube"></a>
+						</li>
+					</ul>
+				</nav>
+			</section>
+		</div>
 	</header>
-	<main class="main center">
-		<section class="hero hero--main">
-			<div class="hero__content">
-				<h2 class="hero__title">Ozon New Skills</h2>
-				<p class="hero__subtitle">Поможем получить и прокачать навыки, которые будут полезны в текущей карьере
-					или дадут старт новой!</p>
-				<a href="#" class="button">Выбрать курс</a>
+	<main class="main">
+		<section class="hero center">
+			<div class="hero--body hero--main">
+				<div class="hero__content">
+					<h2 class="hero__title">Ozon New Skills</h2>
+					<p class="hero__subtitle">Поможем получить и прокачать навыки, которые будут полезны в текущей карьере
+						или дадут старт новой!</p>
+					<a href="#" class="button">Выбрать курс</a>
+				</div>
 			</div>
 		</section>
-		<section class="courses">
+		<section class="heroMobile heroMobile-main">
+			<div class="heroMobile__image heroMobile__image-heroMain"></div>
+			<div class="heroMobile__info">
+				<div class="heroMobile--body">
+					<h2 class="heroMobile__title">Ozon New Skills</h2>
+					<p class="heroMobile__text">Поможем получить и&nbsp;прокачать навыки, которые будут полезны в&nbsp;текущей
+						карьере или дадут старт новой!</p>
+					<a href="" class="heroMobile__link button">Выбрать курс</a>
+				</div>
+			</div>
+		</section>
+		<section class="courses center">
 			<h2 class="title">Наши курсы</h2>
-			<div class="courses__box">
-				<div class="courses__box-item">
-					<div class="courses__box-itemBg courses__box-itemBg-business"></div>
-					<div class="courses__box-itemInfo">
-						<h4 class="courses__box-itemTitle">Бизнес-аналитика</h4>
-						<p class="courses__box-itemText">Изучение основных инструментов<br>и механизмов бизнес-аналитики</p>
-						<a href="#" class="courses__box-itemLink">Узнать больше</a>
+			<div class="courses--body">
+				<div class="courses__box">
+					<div class="courses__box-item">
+						<div class="courses__box-itemBg courses__box-itemBg-business"></div>
+						<div class="courses__box-itemInfo">
+							<div class="courses__box-itemInfoWrap">
+								<div class="courses__box-itemTitle">
+									<h4>Бизнес-аналитика</h4>
+								</div>
+								<p class="courses__box-itemText">Изучение основных инструментов и&nbsp;механизмов бизнес-аналитики</p>
+							</div>
+							<a href="#" class="courses__box-itemLink">Узнать больше</a>
+						</div>
 					</div>
-				</div>
-				<div class="courses__box-item">
-					<div class="courses__box-itemBg courses__box-itemBg-python"></div>
-					<div class="courses__box-itemInfo">
-						<h4 class="courses__box-itemTitle">Python 18+</h4>
-						<p class="courses__box-itemText">Основы программирования и знакомство с возможностями языка Python</p>
-						<a href="#" class="courses__box-itemLink">Узнать больше</a>
+					<div class="courses__box-item">
+						<div class="courses__box-itemBg courses__box-itemBg-python"></div>
+						<div class="courses__box-itemInfo">
+							<div class="courses__box-itemInfoWrap">
+								<div class="courses__box-itemTitle">
+									<h4 class="courses__box-itemTitle">Python 18+</h4>
+								</div>
+								<p class="courses__box-itemText">Основы программирования и знакомство с возможностями языка Python</p>
+							</div>
+							<a href="#" class="courses__box-itemLink">Узнать больше</a>
+						</div>
 					</div>
-				</div>
-				<div class="courses__box-item">
-					<div class="courses__box-itemBg courses__box-itemBg-frontend"></div>
-					<div class="courses__box-itemInfo">
-						<h4 class="courses__box-itemTitle">Frontend-разработчик</h4>
-						<p class="courses__box-itemText">Курс для новичков, которые хотят начать свой путь в Frontend-разработке
-						</p>
-						<a href="#" class="courses__box-itemLink">Узнать больше</a>
+					<div class="courses__box-item">
+						<div class="courses__box-itemBg courses__box-itemBg-frontend"></div>
+						<div class="courses__box-itemInfo">
+							<h4 class="courses__box-itemTitle">Frontend-разработчик</h4>
+							<p class="courses__box-itemText">Курс для новичков, которые хотят начать свой путь
+								в&nbsp;Frontend-разработке
+							</p>
+							<a href="#" class="courses__box-itemLink">Узнать больше</a>
+						</div>
 					</div>
 				</div>
 			</div>
 		</section>
-		<section class="hero hero--second">
-			<div class="hero__content">
-				<h2 class="hero__title">Сложно определиться?</h2>
-				<p class="hero__subtitle">Оставьте контактные данные и наши специалисты помогут понять, что вам ближе.</p>
-				<a href="#" class="button">Оставить заявку</a>
+		<section class="hero center">
+			<div class="hero--body hero--second">
+				<div class="hero__content">
+					<h2 class="hero__title">Сложно определиться?</h2>
+					<p class="hero__subtitle">Оставьте контактные данные и наши специалисты помогут понять, что вам ближе.</p>
+					<a href="#" class="button">Оставить заявку</a>
+				</div>
+			</div>
+		</section>
+		<section class="heroMobile heroMobile-second">
+			<div class="heroMobile__image heroMobile__image-heroSecond"></div>
+			<div class="heroMobile__info">
+				<div class="heroMobile--body heroMobile--body-second">
+					<h2 class="heroMobile__title">Ozon New Skills</h2>
+					<p class="heroMobile__text">Поможем получить и&nbsp;прокачать навыки, которые будут
+						полезны в&nbsp;текущей карьере или дадут старт новой!</p>
+					<a href="" class="heroMobile__link button">Выбрать курс</a>
+				</div>
 			</div>
 		</section>
 		<section class="advantages">
 			<h2 class="title">Преимущества</h2>
-			<div class="advantages__box">
-				<div class="advantages__box-item">
-					<div class="advantages__box-itemBg advantages__box-itemBg-leader"></div>
-					<div class="advantages__box-itemInfo">
-						<h4 class="advantages__box-itemTitle">Лидерство</h4>
-						<p class="advantages__box-itemText">Образовательный проект от лидера российского<br>e-com</p>
+			<div class="advantages--body">
+				<div class="advantages__box">
+					<div class="advantages__box-item">
+						<div class="advantages__box-itemBg advantages__box-itemBg-leader"></div>
+						<div class="advantages__box-itemInfo">
+							<h4 class="advantages__box-itemTitle">Лидерство</h4>
+							<p class="advantages__box-itemText">Образовательный проект от&nbsp;лидера российского e&#8209;com</p>
+						</div>
 					</div>
-				</div>
-				<div class="advantages__box-item">
-					<div class="advantages__box-itemBg advantages__box-itemBg-expert"></div>
-					<div class="advantages__box-itemInfo">
-						<h4 class="advantages__box-itemTitle">Экспертиза</h4>
-						<p class="advantages__box-itemText">Преподаватели<br>с уникальным опытом</p>
+					<div class="advantages__box-item">
+						<div class="advantages__box-itemBg advantages__box-itemBg-expert"></div>
+						<div class="advantages__box-itemInfo">
+							<h4 class="advantages__box-itemTitle">Экспертиза</h4>
+							<p class="advantages__box-itemText">Преподаватели<br>с уникальным опытом</p>
+						</div>
 					</div>
-				</div>
-				<div class="advantages__box-item">
-					<div class="advantages__box-itemBg advantages__box-itemBg-relevance"></div>
-					<div class="advantages__box-itemInfo">
-						<h4 class="advantages__box-itemTitle">Актуальность</h4>
-						<p class="advantages__box-itemText">Погружение в мир современных профессий</p>
+					<div class="advantages__box-item">
+						<div class="advantages__box-itemBg advantages__box-itemBg-relevance"></div>
+						<div class="advantages__box-itemInfo">
+							<h4 class="advantages__box-itemTitle">Актуальность</h4>
+							<p class="advantages__box-itemText">Погружение в мир современных профессий</p>
+						</div>
 					</div>
-				</div>
-				<div class="advantages__box-item">
-					<div class="advantages__box-itemBg advantages__box-itemBg-curator"></div>
-					<div class="advantages__box-itemInfo">
-						<h4 class="advantages__box-itemTitle">Кураторы</h4>
-						<p class="advantages__box-itemText">Поддержка преподавателя и куратора на всех этапах обучения</p>
+					<div class="advantages__box-item">
+						<div class="advantages__box-itemBg advantages__box-itemBg-curator"></div>
+						<div class="advantages__box-itemInfo">
+							<h4 class="advantages__box-itemTitle">Кураторы</h4>
+							<p class="advantages__box-itemText">Поддержка преподавателя и&nbsp;куратора на&nbsp;всех этапах обучения
+							</p>
+						</div>
 					</div>
 				</div>
 			</div>
 		</section>
+		<section class="request">
+			<div class="requestWrap center">
+				<h2 class="title">Оставить заявку<br>на бесплатное пробное занятие</h2>
+				<form class="request__form" action="#">
+					<label class="request__form-label">
+						<input type="text" class="request__form-input" placeholder="Город">
+					</label>
+					<label class="request__form-label">
+						<input type="tel" class="request__form-input" value="+7" placeholder="Веедите номер телефона">
+					</label>
+					<label class="request__form-label">
+						<input type="email" class="request__form-input" placeholder="E-mail">
+					</label>
+					<label class="request__form-label">
+						<input type="text" class="request__form-input" placeholder="Имя и фамилия" disabled>
+					</label>
+					<label class="select request__form-label" for="select">
+						<input class="input" type="radio" name="list" value="not_changed" id="bg" checked/>
+						<input class="input" type="radio" name="list" value="not_changed" id="select">
+						<label class="bg" for="bg"></label>
+						<div class="items">
+							<input class="input" type="radio" name="list" value="first_value" id="list[0]">
+							<label for="list[0]">Select 1</label>
+							<input class="input" type="radio" name="list" value="second_value" id="list[1]">
+							<label for="list[1]">Select 2</label>
+							<input class="input" type="radio" name="list" value="third_value" id="list[2]">
+							<label for="list[2]">Select 3</label>
+							<input class="input" type="radio" name="list" value="fourth_value" id="list[3]">
+							<label for="list[3]">Select 4</label>
+							<input class="input" type="radio" name="list" value="fifth_value" id="list[4]">
+							<label for="list[4]">Select 5</label>
+							<span class="select-title">Выберите курс</span>
+						</div>
+					</label>
+					<label class="request__form-label">
+							<textarea name="comments" class="request__form-input request__form-textarea" placeholder="Комментарий"
+												wrap="soft"></textarea>
+					</label>
+					<button type="submit" class="button">Отправить заявку
+					</button>
+				</form>
+			</div>
+		</section>
 	</main>
-	<section class="request">
-		<div class="requestWrap center">
-			<h2 class="title">Оставить заявку<br>на бесплатное пробное занятие</h2>
-			<form
-					class="request__form"
-					action="#"
-			>
-				<label class="request__form-label">
-					<input
-							type="text"
-							class="request__form-input"
-							placeholder="Город"
-					>
-				</label>
-				<label class="request__form-label">
-					<input
-							type="tel"
-							class="request__form-input"
-							value="+7"
-							placeholder="Веедите номер телефона"
-					>
-				</label>
-				<label class="request__form-label">
-					<input
-							type="email"
-							class="request__form-input"
-							placeholder="E-mail"
-					>
-				</label>
-				<label class="request__form-label">
-					<input
-							type="text"
-							class="request__form-input"
-							placeholder="Имя и фамилия"
-							disabled
-					>
-				</label>
-				<label class="select request__form-label" for="select">
-					<input class="input" type="radio" name="list" value="not_changed" id="bg" checked/>
-					<input class="input" type="radio" name="list" value="not_changed" id="select">
-					<label class="bg" for="bg"></label>
-					<div class="items">
-						<input class="input" type="radio" name="list" value="first_value" id="list[0]">
-						<label for="list[0]">Select 1</label>
-						<input class="input" type="radio" name="list" value="second_value" id="list[1]">
-						<label for="list[1]">Select 2</label>
-						<input class="input" type="radio" name="list" value="third_value" id="list[2]">
-						<label for="list[2]">Select 3</label>
-						<input class="input" type="radio" name="list" value="fourth_value" id="list[3]">
-						<label for="list[3]">Select 4</label>
-						<input class="input" type="radio" name="list" value="fifth_value" id="list[4]">
-						<label for="list[4]">Select 5</label>
-						<span class="select-title">Выберите курс</span>
-					</div>
-				</label>
-				<label class="request__form-label">
-					<textarea
-							name="comments"
-							class="request__form-input request__form-textarea"
-							placeholder="Комментарий"
-							wrap="soft"
-					></textarea>
-				</label>
-				<button
-						type="submit"
-						class="button"
-				>Отправить заявку
-				</button>
-			</form>
-		</div>
-	</section>
 	<footer class="footer center">
-		<div class="footer__mainLogo">
-			<a href="index.html" class="mainLogo"></a>
-		</div>
-		<div class="footer__info">
-			<p class="footer__info-text">
-				&copy;&nbsp;2019&nbsp;ООО &laquo;Интернет Решения&raquo;. Все права защищены.<br>
-				Москва, Пресненская наб., 10, блок&nbsp;С<br>
-				<a href="mailto:ons@ozon.ru" class="footer__info-link">ons@ozon.ru</a>
-			</p>
-		</div>
-		<nav class="footer__social">
-			<ul class="footer__social-list">
-				<li class="footer__social-item">
-					<a href="#" class="footer__social-link footer__social-linkInsta"></a>
-				</li>
-				<li class="footer__social-item">
-					<a href="#" class="footer__social-link footer__social-linkFacebook"></a>
-				</li>
-				<li class="footer__social-item">
-					<a href="#" class="footer__social-link footer__social-linkVk"></a>
-				</li>
-				<li class="footer__social-item">
-					<a href="#" class="footer__social-link footer__social-linkYoutube"></a>
-				</li>
-			</ul>
-		</nav>
-		<div class="footer__brandLogo">
-			<a href="index.html">
-				<img src="assets/img/logo-brand.svg" alt="logo">
-			</a>
+		<div class="footer--body">
+			<div class="footer__mainLogo">
+				<a href="index.html" class="mainLogo"></a>
+			</div>
+			<div class="footer__tagline">Это вам не Школа!</div>
+			<div class="footer__info">
+				<p class="footer__info-text">
+					&copy;&nbsp;2020&nbsp;ООО &laquo;Интернет Решения&raquo;. Все права защищены.<br>
+					Москва, Пресненская наб., 10, блок&nbsp;С<br>
+					<a href="mailto:ons@ozon.ru" class="footer__info-link">ons@ozon.ru</a>
+				</p>
+			</div>
+			<nav class="footer__social">
+				<ul class="footer__social-list">
+					<li class="footer__social-item">
+						<a href="#" class="footer__social-link footer__social-linkInsta"></a>
+					</li>
+					<li class="footer__social-item">
+						<a href="#" class="footer__social-link footer__social-linkFacebook"></a>
+					</li>
+					<li class="footer__social-item">
+						<a href="#" class="footer__social-link footer__social-linkVk"></a>
+					</li>
+					<li class="footer__social-item">
+						<a href="#" class="footer__social-link footer__social-linkYoutube"></a>
+					</li>
+				</ul>
+			</nav>
+			<div class="footer__brandLogo">
+				<a href="index.html">
+					<img src="assets/img/logo-brand.svg" alt="logo">
+				</a>
+			</div>
 		</div>
 	</footer>
 </div>
